Fixed the spacing for the footer.

--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -48,7 +48,7 @@ header {
 }
 
 #footerSpacing{
-	padding: 25px;
+	padding: 50px;
 }
 
 footer {
